--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
           wait-on-timeout: 120
           browser: chrome
           record: true
-          parallel: true
+          # parallel: true
           group: "UI - Chrome"
           spec: cypress/tests/ui/*
           config-file: cypress.config.ts
